; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_page.c_vm_page_alloc_freelist.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_page.c_vm_page_alloc_freelist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm_domainset_iter = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @vm_page_alloc_freelist(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.vm_domainset_iter, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %8 = call i32 @vm_domainset_iter_page_init(%struct.vm_domainset_iter* %5, i32* null, i32 0, i32* %7, i32* %4)
  br label %9

9:                                                ; preds = %18, %2
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32* @vm_page_alloc_freelist_domain(i32 %10, i32 %11, i32 %12)
  store i32* %13, i32** %6, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %9
  br label %21

17:                                               ; preds = %9
  br label %18

18:                                               ; preds = %17
  %19 = call i64 @vm_domainset_iter_page(%struct.vm_domainset_iter* %5, i32* null, i32* %7)
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %9, label %21

21:                                               ; preds = %18, %16
  %22 = load i32*, i32** %6, align 8
  ret i32* %22
}

declare dso_local i32 @vm_domainset_iter_page_init(%struct.vm_domainset_iter*, i32*, i32, i32*, i32*) #1

declare dso_local i32* @vm_page_alloc_freelist_domain(i32, i32, i32) #1

declare dso_local i64 @vm_domainset_iter_page(%struct.vm_domainset_iter*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
